add new key CL_CF_CS_name_duplicate_tip

--- a/language/i18n_cs.json
+++ b/language/i18n_cs.json
@@ -4025,5 +4025,24 @@
     "CL_DV_DW_water_energy": "Voda a energie",
     "CL_DV_DW_light_display": "Světlo a displej",
     "CL_DV_HOB_how_to_connect_accessories": "Jak připojit příslušenství",
-    "CL_CF_SK_amount_of_servings": "Množství porcí"
+    "CL_CF_SK_amount_of_servings": "Množství porcí",
+    "CL_CF_CS_name_duplicate_tip": "Název zařízení již existuje",
+    "CL_DV_OV_your_oven_is_offline": "Vaše trouba je offline",
+    "CL_DV_OV_offline_tips": "Některé funkce nelze použít, když je trouba offline. Zkuste troubu znovu připojit.",
+    "CL_DV_OV_combi": "kombi",
+    "share_account": "SDÍLENÉ ÚČTY",
+    "CL_CF_CS_bio24_creft_setup_setp1": "Zapněte troubu. Stisknutím tří teček **** v levém rohu displeje trouby otevřete nabídku přímého přístupu.",
+    "CL_CF_CS_bio24_creft_setup_setp2": "Otevřete nabídku Nastavení stisknutím ikony **** vpravo.",
+    "CL_CF_CS_bio24_creft_setup_setp3": "Posouvejte se v nabídce Nastavení dolů, dokud neuvidíte ''PŘIPOJIT''. Stiskněte pro vstup do nabídky CONNECT.",
+    "CL_CF_CS_bio24_creft_setup_setp4": "Stiskněte ''PŘIPOJIT TROUBU''.",
+    "CL_CF_CS_bio24_creft_setup_setp5": "Stisknutím přepínacího tlačítka vpravo zapněte Wi-Fi.",
+    "CL_CF_CS_bio24_creft_setup_setp6": "Objeví se tlačítko ''CONNECT''. Stiskněte tlačítko. Nyní můžete pokračovat v aplikaci klepnutím na tlačítko NEXT níže.",
+    "CL_CF_CS_bio24_creft_pair_step4": "Stiskněte ''CONNECT USER''.",
+    "CL_CF_CS_bio24_creft_pair_step5": "Stiskněte tlačítko ''PÁROVAT''.",
+    "CL_CF_CS_bio24_creft_pair_step6": "Spustí se odpočítávání. Nyní můžete pokračovat v aplikaci klepnutím na tlačítko NEXT níže.",
+    "CL_CF_CS_bio24_elements_setup_step1": "Zapněte troubu. Otevřete nabídku Nastavení stisknutím ikony **** v levém horním rohu.",
+    "CL_CF_CS_bio24_elements_setup_step2": "Posouvejte se v nabídce Nastavení dolů, dokud neuvidíte ''Připojení''. Stisknutím vstoupíte do nabídky Připojení.",
+    "CL_CF_CS_bio24_elements_setup_step3": "Stiskněte tlačítko ''PŘIPOJIT TROUBU'' na levé straně. Když se otevře nabídka, stisknutím přepínacího tlačítka vpravo povolte Wi-Fi.",
+    "CL_CF_CS_bio24_elements_setup_step4": "Objeví se tlačítko ''CONNECT''. Stiskněte tlačítko. Nyní můžete pokračovat v aplikaci klepnutím na tlačítko NEXT níže.",
+    "CL_CF_CS_bio24_elements_pair_step3": "Stiskněte ''CONNECT USER'' na levé straně. Po otevření nabídky stiskněte tlačítko ''PAIR''. Nyní můžete pokračovat v aplikaci klepnutím na tlačítko NEXT níže."
 }
