--- a/language/i18n_da.json
+++ b/language/i18n_da.json
@@ -4025,5 +4025,24 @@
     "CL_DV_DW_water_energy": "Vand & Energi",
     "CL_DV_DW_light_display": "Lys & Display",
     "CL_DV_HOB_how_to_connect_accessories": "Sådan tilslutter du tilbehør",
-    "CL_CF_SK_amount_of_servings": "Antal portioner"
+    "CL_CF_SK_amount_of_servings": "Antal portioner",
+    "CL_CF_CS_name_duplicate_tip": "Apparatets navn findes allerede",
+    "CL_DV_OV_your_oven_is_offline": "Din ovn er offline",
+    "CL_DV_OV_offline_tips": "Nogle funktioner kan ikke bruges, når ovnen er offline. Prøv at tilslutte din ovn igen.",
+    "CL_DV_OV_combi": "kombi",
+    "share_account": "DELTE KONTI",
+    "CL_CF_CS_bio24_creft_setup_setp1": "Tænd din ovn. Tryk på de tre prikker **** i venstre hjørne af ovnens display for at åbne menuen med direkte adgang.",
+    "CL_CF_CS_bio24_creft_setup_setp2": "Åbn menuen Indstillinger ved at trykke på ****-ikonet til højre.",
+    "CL_CF_CS_bio24_creft_setup_setp3": "Rul ned i menuen Indstillinger, indtil du ser ''CONNECT''. Tryk på for at åbne CONNECT-menuen.",
+    "CL_CF_CS_bio24_creft_setup_setp4": "Tryk på ''CONNECT OVEN''.",
+    "CL_CF_CS_bio24_creft_setup_setp5": "Tryk på skifteknappen til højre for at tænde for Wi-Fi.",
+    "CL_CF_CS_bio24_creft_setup_setp6": "En knap ''CONNECT'' vises. Tryk på knappen. Du kan nu fortsætte i appen ved at trykke på knappen NÆSTE nedenfor.",
+    "CL_CF_CS_bio24_creft_pair_step4": "Tryk på ''CONNECT USER''.",
+    "CL_CF_CS_bio24_creft_pair_step5": "Tryk på ''PAIR''-knappen.",
+    "CL_CF_CS_bio24_creft_pair_step6": "En nedtælling starter. Du kan nu fortsætte i appen ved at trykke på knappen NÆSTE nedenfor.",
+    "CL_CF_CS_bio24_elements_setup_step1": "Tænd din ovn. Åbn menuen Indstillinger ved at trykke på ****-ikonet i øverste venstre hjørne.",
+    "CL_CF_CS_bio24_elements_setup_step2": "Rul ned i menuen Indstillinger, indtil du ser ''Connectivity''. Tryk på for at åbne menuen Forbindelse.",
+    "CL_CF_CS_bio24_elements_setup_step3": "Tryk på ''CONNECT OVEN'' i venstre side. Når menuen åbnes, skal du trykke på skifteknappen til højre for at aktivere Wi-Fi.",
+    "CL_CF_CS_bio24_elements_setup_step4": "En knap ''CONNECT'' vises. Tryk på knappen. Du kan nu fortsætte i appen ved at trykke på knappen NÆSTE nedenfor.",
+    "CL_CF_CS_bio24_elements_pair_step3": "Tryk på ''CONNECT USER'' i venstre side. Når menuen åbnes, tryk på ''PAIR''-knappen. Du kan nu fortsætte i appen ved at trykke på knappen NÆSTE nedenfor."
 }
