--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -4025,5 +4025,24 @@
     "CL_DV_DW_water_energy": "Νερό & Ενέργεια",
     "CL_DV_DW_light_display": "Φως & Οθόνη",
     "CL_DV_HOB_how_to_connect_accessories": "Τρόπος σύνδεσης εξαρτημάτων",
-    "CL_CF_SK_amount_of_servings": "Ποσότητα μερίδων"
+    "CL_CF_SK_amount_of_servings": "Ποσότητα μερίδων",
+    "CL_CF_CS_name_duplicate_tip": "Το όνομα της συσκευής υπάρχει ήδη",
+    "CL_DV_OV_your_oven_is_offline": "Ο φούρνος σας είναι εκτός σύνδεσης",
+    "CL_DV_OV_offline_tips": "Ορισμένες λειτουργίες δεν μπορούν να χρησιμοποιηθούν όταν ο φούρνος είναι εκτός σύνδεσης. Προσπαθήστε να επανασυνδέσετε τον φούρνο σας.",
+    "CL_DV_OV_combi": "combi",
+    "share_account": "ΚΟΙΝΟΙ ΛΟΓΑΡΙΑΣΜΟΙ",
+    "CL_CF_CS_bio24_creft_setup_setp1": "Ανάψτε τον φούρνο σας. Πατήστε τις τρεις τελείες **** στην αριστερή γωνία της οθόνης του φούρνου για να ανοίξετε το Μενού Άμεσης Πρόσβασης.",
+    "CL_CF_CS_bio24_creft_setup_setp2": "Ανοίξτε το μενού Ρυθμίσεις πατώντας το εικονίδιο **** στα δεξιά.",
+    "CL_CF_CS_bio24_creft_setup_setp3": "Κάντε κύλιση προς τα κάτω στο μενού Ρυθμίσεις μέχρι να εμφανιστεί η ένδειξη ''ΣΥΝΔΕΣΗ''. Πατήστε για είσοδο στο μενού ΣΥΝΔΕΣΗ.",
+    "CL_CF_CS_bio24_creft_setup_setp4": "Πατήστε ''ΣΥΝΔΕΣΗ ΦΟΥΡΝΟΥ''.",
+    "CL_CF_CS_bio24_creft_setup_setp5": "Πατήστε το κουμπί εναλλαγής στα δεξιά για να ενεργοποιήσετε το Wi-Fi.",
+    "CL_CF_CS_bio24_creft_setup_setp6": "Εμφανίζεται ένα κουμπί ''CONNECT''. Πατήστε το κουμπί. Τώρα μπορείτε να προχωρήσετε στην εφαρμογή πατώντας στο κουμπί ΕΠΟΜΕΝΟ παρακάτω.",
+    "CL_CF_CS_bio24_creft_pair_step4": "Πατήστε ''ΣΥΝΔΕΣΗ ΧΡΗΣΤΗ''.",
+    "CL_CF_CS_bio24_creft_pair_step5": "Πατήστε το κουμπί ''PAIR''.",
+    "CL_CF_CS_bio24_creft_pair_step6": "Μια αντίστροφη μέτρηση ξεκινά. Τώρα μπορείτε να προχωρήσετε στην εφαρμογή πατώντας στο κουμπί ΕΠΟΜΕΝΟ παρακάτω.",
+    "CL_CF_CS_bio24_elements_setup_step1": "Ανάψτε τον φούρνο σας. Ανοίξτε το μενού Ρυθμίσεις πατώντας το εικονίδιο **** στην επάνω αριστερή γωνία.",
+    "CL_CF_CS_bio24_elements_setup_step2": "Κάντε κύλιση προς τα κάτω στο μενού \"Ρυθμίσεις\" μέχρι να δείτε \"Συνδεσιμότητα\". Πατήστε για είσοδο στο μενού Συνδεσιμότητα.",
+    "CL_CF_CS_bio24_elements_setup_step3": "Πατήστε ''ΣΥΝΔΕΣΗ ΦΟΥΡΝΟΥ'' στην αριστερή πλευρά. Όταν ανοίξει το μενού, πατήστε το κουμπί εναλλαγής στα δεξιά για να ενεργοποιήσετε το Wi-Fi.",
+    "CL_CF_CS_bio24_elements_setup_step4": "Εμφανίζεται ένα κουμπί ''CONNECT''. Πατήστε το κουμπί. Τώρα μπορείτε να προχωρήσετε στην εφαρμογή πατώντας στο κουμπί ΕΠΟΜΕΝΟ παρακάτω.",
+    "CL_CF_CS_bio24_elements_pair_step3": "Πατήστε ''ΣΥΝΔΕΣΗ ΧΡΗΣΤΗ'' στην αριστερή πλευρά. Όταν ανοίξει το μενού, πατήστε το κουμπί ''PAIR''. Τώρα μπορείτε να προχωρήσετε στην εφαρμογή πατώντας στο κουμπί ΕΠΟΜΕΝΟ παρακάτω."
 }
