--- a/language/i18n_es.json
+++ b/language/i18n_es.json
@@ -4025,5 +4025,24 @@
     "CL_DV_DW_water_energy": "Agua y energía",
     "CL_DV_DW_light_display": "Iluminación y exhibición",
     "CL_DV_HOB_how_to_connect_accessories": "Cómo conectar accesorios",
-    "CL_CF_SK_amount_of_servings": "Cantidad de porciones"
+    "CL_CF_SK_amount_of_servings": "Cantidad de porciones",
+    "CL_CF_CS_name_duplicate_tip": "El nombre del dispositivo ya existe",
+    "CL_DV_OV_your_oven_is_offline": "Su horno está fuera de línea",
+    "CL_DV_OV_offline_tips": "Algunas funciones no se pueden utilizar cuando el horno está desconectado. Intente volver a conectar el horno.",
+    "CL_DV_OV_combi": "Combinación",
+    "share_account": "CUENTAS COMPARTIDAS",
+    "CL_CF_CS_bio24_creft_setup_setp1": "Encienda el horno. Pulse los tres puntos **** en la esquina izquierda de la pantalla del horno para abrir el menú de acceso directo.",
+    "CL_CF_CS_bio24_creft_setup_setp2": "Abra el menú Configuración presionando el ícono **** a la derecha.",
+    "CL_CF_CS_bio24_creft_setup_setp3": "Desplácese hacia abajo en el menú de Configuración hasta que vea \"CONECTAR\". Presione para ingresar al menú CONECTAR.",
+    "CL_CF_CS_bio24_creft_setup_setp4": "Pulse en “CONECTAR HORNO”.",
+    "CL_CF_CS_bio24_creft_setup_setp5": "Presione el botón de alternancia a la derecha para activar el Wi-Fi.",
+    "CL_CF_CS_bio24_creft_setup_setp6": "Aparecerá el botón \"CONECTAR\". Púlselo. Ahora puede continuar en la aplicación tocando el botón SIGUIENTE que aparece a continuación.",
+    "CL_CF_CS_bio24_creft_pair_step4": "Pulse en “CONECTAR USUARIO”.",
+    "CL_CF_CS_bio24_creft_pair_step5": "Presione el botón \"EMPAREJAR\".",
+    "CL_CF_CS_bio24_creft_pair_step6": "Comienza la cuenta regresiva. Ahora puedes continuar en la aplicación tocando el botón SIGUIENTE que aparece a continuación.",
+    "CL_CF_CS_bio24_elements_setup_step1": "Encienda el horno. Abra el menú de Ajustes presionando el ícono **** en la esquina superior izquierda.",
+    "CL_CF_CS_bio24_elements_setup_step2": "Desplácese hacia abajo en el menú de Configuración hasta que vea \"Conectividad\". Presione para ingresar al menú de Conectividad.",
+    "CL_CF_CS_bio24_elements_setup_step3": "Pulse en “CONECTAR HORNO” en el lado izquierdo. Cuando se abra el menú, pulse el botón de alternancia de la derecha para habilitar el Wi-Fi.",
+    "CL_CF_CS_bio24_elements_setup_step4": "Aparecerá el botón \"CONECTAR\". Púlselo. Ahora puede continuar en la aplicación tocando el botón SIGUIENTE que aparece a continuación.",
+    "CL_CF_CS_bio24_elements_pair_step3": "Pulsa en “CONECTAR USUARIO” en el lado izquierdo. Cuando se abra el menú, pulsa en el botón “EMPAREJAR”. Ahora puedes continuar en la aplicación pulsando en el botón SIGUIENTE que aparece a continuación."
 }
