--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -4025,5 +4025,24 @@
     "CL_DV_DW_water_energy": "آب و انرژی",
     "CL_DV_DW_light_display": "نور و نمایشگر",
     "CL_DV_HOB_how_to_connect_accessories": "نحوه اتصال لوازم جانبی",
-    "CL_CF_SK_amount_of_servings": "مقدار سروینگ"
+    "CL_CF_SK_amount_of_servings": "مقدار سروینگ",
+    "CL_CF_CS_name_duplicate_tip": "نام دستگاه از قبل وجود دارد",
+    "CL_DV_OV_your_oven_is_offline": "فر شما آفلاین است",
+    "CL_DV_OV_offline_tips": "وقتی فر آفلاین است نمی توان از برخی از عملکردها استفاده کرد. سعی کنید فر خود را دوباره وصل کنید.",
+    "CL_DV_OV_combi": "ترکیبی",
+    "share_account": "حساب های مشترک",
+    "CL_CF_CS_bio24_creft_setup_setp1": "فر خود را روشن کنید. روی سه نقطه **** در گوشه سمت چپ صفحه نمایش فر فشار دهید تا منوی دسترسی مستقیم باز شود.",
+    "CL_CF_CS_bio24_creft_setup_setp2": "منوی تنظیمات را با فشار دادن نماد **** در سمت راست باز کنید.",
+    "CL_CF_CS_bio24_creft_setup_setp3": "منوی تنظیمات را به پایین اسکرول کنید تا «اتصال» را ببینید. برای ورود به منوی CONNECT فشار دهید.",
+    "CL_CF_CS_bio24_creft_setup_setp4": "\"اتصال کوره\" را فشار دهید.",
+    "CL_CF_CS_bio24_creft_setup_setp5": "دکمه جابجایی در سمت راست را فشار دهید تا Wi-Fi روشن شود.",
+    "CL_CF_CS_bio24_creft_setup_setp6": "دکمه \"اتصال\" ظاهر می شود. روی دکمه فشار دهید. اکنون می توانید با ضربه زدن روی دکمه NEXT در زیر در برنامه ادامه دهید.",
+    "CL_CF_CS_bio24_creft_pair_step4": "\"اتصال کاربر\" را فشار دهید.",
+    "CL_CF_CS_bio24_creft_pair_step5": "دکمه ''PAIR'' را فشار دهید.",
+    "CL_CF_CS_bio24_creft_pair_step6": "شمارش معکوس شروع می شود. اکنون می توانید با ضربه زدن روی دکمه NEXT در زیر در برنامه ادامه دهید.",
+    "CL_CF_CS_bio24_elements_setup_step1": "فر خود را روشن کنید. منوی تنظیمات را با فشار دادن نماد **** در گوشه بالا سمت چپ باز کنید.",
+    "CL_CF_CS_bio24_elements_setup_step2": "منوی تنظیمات را به پایین اسکرول کنید تا «اتصال» را ببینید. برای ورود به منوی Connectivity فشار دهید.",
+    "CL_CF_CS_bio24_elements_setup_step3": "در سمت چپ ''CONNECT OVEN'' را فشار دهید. وقتی منو باز شد، دکمه جابجایی در سمت راست را فشار دهید تا Wi-Fi فعال شود.",
+    "CL_CF_CS_bio24_elements_setup_step4": "دکمه \"اتصال\" ظاهر می شود. روی دکمه فشار دهید. اکنون می توانید با ضربه زدن روی دکمه NEXT در زیر در برنامه ادامه دهید.",
+    "CL_CF_CS_bio24_elements_pair_step3": "\"اتصال کاربر\" را در سمت چپ فشار دهید. وقتی منو باز شد، دکمه ''PAIR'' را فشار دهید. اکنون می توانید با ضربه زدن روی دکمه NEXT در زیر در برنامه ادامه دهید."
 }
