--- a/language/i18n_hu.json
+++ b/language/i18n_hu.json
@@ -4025,5 +4025,24 @@
     "CL_DV_DW_water_energy": "Víz és energia",
     "CL_DV_DW_light_display": "Fény és kijelző",
     "CL_DV_HOB_how_to_connect_accessories": "Kiegészítők csatlakoztatásának útmutatója",
-    "CL_CF_SK_amount_of_servings": "Az adagok mennyisége"
+    "CL_CF_SK_amount_of_servings": "Az adagok mennyisége",
+    "CL_CF_CS_name_duplicate_tip": "A készüléknév már létezik",
+    "CL_DV_OV_your_oven_is_offline": "A sütője offline állapotban van",
+    "CL_DV_OV_offline_tips": "Egyes funkciók nem használhatók, ha a sütő offline állapotban van. Próbálja újra csatlakoztatni a sütőt.",
+    "CL_DV_OV_combi": "kombi",
+    "share_account": "MEGOSZTOTT FIÓKOK",
+    "CL_CF_CS_bio24_creft_setup_setp1": "Kapcsolja be a sütőt. Nyomja meg a három pontot **** a sütő kijelzőjének bal sarkában a Közvetlen hozzáférés menü megnyitásához.",
+    "CL_CF_CS_bio24_creft_setup_setp2": "Nyissa meg a Beállítások menüt a jobb oldalon található **** ikon megnyomásával.",
+    "CL_CF_CS_bio24_creft_setup_setp3": "Görgessen lefelé a Beállítások menüben, amíg meg nem jelenik a „CONNECT” felirat. Nyomja meg a gombot, hogy belépjen a CONNECT menübe.",
+    "CL_CF_CS_bio24_creft_setup_setp4": "Nyomja meg a „SÜTŐ CSATLAKOZTATÁSA” gombot.",
+    "CL_CF_CS_bio24_creft_setup_setp5": "Nyomja meg a jobb oldali váltógombot a Wi-Fi bekapcsolásához.",
+    "CL_CF_CS_bio24_creft_setup_setp6": "Megjelenik a „CONNECT” gomb. Nyomja meg a gombot. Most már folytathatja az alkalmazásban az alábbi NEXT gomb megérintésével.",
+    "CL_CF_CS_bio24_creft_pair_step4": "Nyomja meg a „FELHASZNÁLÓ CSATLAKOZTATÁSA” gombot.",
+    "CL_CF_CS_bio24_creft_pair_step5": "Nyomja meg a ''PAIR'' gombot.",
+    "CL_CF_CS_bio24_creft_pair_step6": "Visszaszámlálás indul. Most már folytathatja az alkalmazásban az alábbi NEXT gomb megérintésével.",
+    "CL_CF_CS_bio24_elements_setup_step1": "Kapcsolja be a sütőt. Nyissa meg a Beállítások menüt a bal felső sarokban található **** ikon megnyomásával.",
+    "CL_CF_CS_bio24_elements_setup_step2": "Görgessen lefelé a Beállítások menüben, amíg meg nem jelenik a „Kapcsolat” felirat. Nyomja meg a gombot, hogy belépjen a Connectivity menübe.",
+    "CL_CF_CS_bio24_elements_setup_step3": "Nyomja meg a „SÜTŐ CSATLAKOZTATÁSA” gombot a bal oldalon. Amikor megnyílik a menü, nyomja meg a jobb oldalon található váltógombot a Wi-Fi engedélyezéséhez.",
+    "CL_CF_CS_bio24_elements_setup_step4": "Megjelenik a „CONNECT” gomb. Nyomja meg a gombot. Most már folytathatja az alkalmazásban az alábbi NEXT gomb megérintésével.",
+    "CL_CF_CS_bio24_elements_pair_step3": "Nyomja meg a „FELHASZNÁLÓ CSATLAKOZTATÁSA” gombot a bal oldalon. Amikor megnyílik a menü, nyomja meg a ''PAIR'' gombot. Most már folytathatja az alkalmazásban, ha megérinti az alábbi NEXT gombot."
 }
