--- a/language/i18n_nb.json
+++ b/language/i18n_nb.json
@@ -4025,5 +4025,24 @@
     "CL_DV_DW_water_energy": "Vann og energi",
     "CL_DV_DW_light_display": "Lys og skjerm",
     "CL_DV_HOB_how_to_connect_accessories": "Slik kobler du til tilbehør",
-    "CL_CF_SK_amount_of_servings": "Antall porsjoner"
+    "CL_CF_SK_amount_of_servings": "Antall porsjoner",
+    "CL_CF_CS_name_duplicate_tip": "Enhetsnavnet finnes allerede",
+    "CL_DV_OV_your_oven_is_offline": "Ovnen din er offline",
+    "CL_DV_OV_offline_tips": "Enkelte funksjoner kan ikke brukes når ovnen er frakoblet. Prøv å koble til ovnen igjen.",
+    "CL_DV_OV_combi": "kombi",
+    "share_account": "DELT KONTO",
+    "CL_CF_CS_bio24_creft_setup_setp1": "Slå på ovnen. Trykk på de tre prikkene **** i venstre hjørne av ovnsdisplayet for å åpne menyen for direkte tilgang.",
+    "CL_CF_CS_bio24_creft_setup_setp2": "Åpne Innstillinger-menyen ved å trykke på ****-ikonet til høyre.",
+    "CL_CF_CS_bio24_creft_setup_setp3": "Rull nedover Innstillinger-menyen til du ser ''KOBLE TIL''. Trykk for å gå inn i CONNECT-menyen.",
+    "CL_CF_CS_bio24_creft_setup_setp4": "Trykk på ''KOBLE OVN''.",
+    "CL_CF_CS_bio24_creft_setup_setp5": "Trykk på veksleknappen til høyre for å slå PÅ Wi-Fi.",
+    "CL_CF_CS_bio24_creft_setup_setp6": "En knapp ''KOBLE TIL'' vises. Trykk på knappen. Du kan nå fortsette i appen ved å trykke på NESTE-knappen nedenfor.",
+    "CL_CF_CS_bio24_creft_pair_step4": "Trykk på ''KOBLE BRUKER''.",
+    "CL_CF_CS_bio24_creft_pair_step5": "Trykk på ''PAIR''-knappen.",
+    "CL_CF_CS_bio24_creft_pair_step6": "En nedtelling starter. Du kan nå fortsette i appen ved å trykke på NESTE-knappen nedenfor.",
+    "CL_CF_CS_bio24_elements_setup_step1": "Slå på ovnen. Åpne Innstillinger-menyen ved å trykke på ****-ikonet øverst til venstre.",
+    "CL_CF_CS_bio24_elements_setup_step2": "Rull nedover Innstillinger-menyen til du ser ''Tilkobling''. Trykk for å gå inn i Tilkoblingsmenyen.",
+    "CL_CF_CS_bio24_elements_setup_step3": "Trykk på ''KOBLE OVN'' på venstre side. Når menyen åpnes, trykk på veksleknappen til høyre for å aktivere Wi-Fi.",
+    "CL_CF_CS_bio24_elements_setup_step4": "En knapp ''KOBLE TIL'' vises. Trykk på knappen. Du kan nå fortsette i appen ved å trykke på NESTE-knappen nedenfor.",
+    "CL_CF_CS_bio24_elements_pair_step3": "Trykk på ''KOBLE BRUKER'' på venstre side. Når menyen åpnes, trykk på ''PAIR''-knappen. Du kan nå fortsette i appen ved å trykke på NESTE-knappen nedenfor."
 }
