--- a/language/i18n_pt.json
+++ b/language/i18n_pt.json
@@ -4025,5 +4025,24 @@
     "CL_DV_DW_water_energy": "Água e Energia",
     "CL_DV_DW_light_display": "Luz e Exibição",
     "CL_DV_HOB_how_to_connect_accessories": "Como conectar acessórios",
-    "CL_CF_SK_amount_of_servings": "Quantidade de porções"
+    "CL_CF_SK_amount_of_servings": "Quantidade de porções",
+    "CL_CF_CS_name_duplicate_tip": "O nome do aparelho já existe",
+    "CL_DV_OV_your_oven_is_offline": "Seu forno está offline",
+    "CL_DV_OV_offline_tips": "Algumas funcionalidades não podem ser usadas quando o forno está offline. Tente reconectar seu forno.",
+    "CL_DV_OV_combi": "combinado",
+    "share_account": "CONTAS COMPARTILHADAS",
+    "CL_CF_CS_bio24_creft_setup_setp1": "Ligue o seu forno. Pressione os três pontos **** no canto esquerdo do visor do forno para abrir o Menu de Acesso Direto.",
+    "CL_CF_CS_bio24_creft_setup_setp2": "Abra o menu Configurações pressionando o ícone **** à direita.",
+    "CL_CF_CS_bio24_creft_setup_setp3": "Role para baixo no menu Configurações até ver ''CONECTAR''. Pressione para entrar no menu CONECTAR.",
+    "CL_CF_CS_bio24_creft_setup_setp4": "Pressione ''CONECTAR FORNO''.",
+    "CL_CF_CS_bio24_creft_setup_setp5": "Pressione o botão de alternância à direita para ligar o Wi-Fi.",
+    "CL_CF_CS_bio24_creft_setup_setp6": "Um botão ''CONECTAR'' aparece. Pressione o botão. Agora você pode prosseguir no aplicativo tocando no botão PRÓXIMO abaixo.",
+    "CL_CF_CS_bio24_creft_pair_step4": "Pressione ''CONECTAR USUÁRIO''.",
+    "CL_CF_CS_bio24_creft_pair_step5": "Pressione o botão ''EMPARELHAR''.",
+    "CL_CF_CS_bio24_creft_pair_step6": "Uma contagem regressiva começa. Agora você pode prosseguir no aplicativo tocando no botão NEXT abaixo.",
+    "CL_CF_CS_bio24_elements_setup_step1": "Ligue seu forno. Abra o menu Configurações pressionando o ícone **** no canto superior esquerdo.",
+    "CL_CF_CS_bio24_elements_setup_step2": "Role para baixo no menu Configurações até ver ''Conectividade''. Pressione para entrar no menu Conectividade.",
+    "CL_CF_CS_bio24_elements_setup_step3": "Pressione ''CONNECT OVEN'' no lado esquerdo. Quando o menu abrir, pressione o botão de alternância à direita para habilitar o Wi-Fi.",
+    "CL_CF_CS_bio24_elements_setup_step4": "Um botão ''CONECTAR'' aparece. Pressione o botão. Agora você pode prosseguir no aplicativo tocando no botão PRÓXIMO abaixo.",
+    "CL_CF_CS_bio24_elements_pair_step3": "Pressione ''CONECTAR USUÁRIO'' no lado esquerdo. Quando o menu abrir, pressione o botão ''PAREAR''. Agora você pode prosseguir no aplicativo tocando no botão PRÓXIMO abaixo."
 }
