--- a/language/i18n_th.json
+++ b/language/i18n_th.json
@@ -4025,5 +4025,24 @@
     "CL_DV_DW_water_energy": "น้ำและพลังงาน",
     "CL_DV_DW_light_display": "แสงและจอภาพ",
     "CL_DV_HOB_how_to_connect_accessories": "วิธีการเชื่อมต่ออุปกรณ์เสริม",
-    "CL_CF_SK_amount_of_servings": "จำนวนเสิร์ฟ"
+    "CL_CF_SK_amount_of_servings": "จำนวนเสิร์ฟ",
+    "CL_CF_CS_name_duplicate_tip": "ชื่ออุปกรณ์มีอยู่แล้ว",
+    "CL_DV_OV_your_oven_is_offline": "เตาอบของคุณออฟไลน์",
+    "CL_DV_OV_offline_tips": "ไม่สามารถใช้ฟังก์ชันบางอย่างได้เมื่อเตาอบออฟไลน์ ลองเชื่อมต่อเตาอบของคุณอีกครั้ง",
+    "CL_DV_OV_combi": "คอมบิ",
+    "share_account": "บัญชีที่ใช้ร่วมกัน",
+    "CL_CF_CS_bio24_creft_setup_setp1": "เปิดเตาอบของคุณ กดจุดสามจุด **** ที่มุมซ้ายของจอแสดงผลเตาอบเพื่อเปิดเมนูการเข้าถึงโดยตรง",
+    "CL_CF_CS_bio24_creft_setup_setp2": "เปิดเมนูการตั้งค่าโดยการกดไอคอน **** ทางด้านขวา",
+    "CL_CF_CS_bio24_creft_setup_setp3": "เลื่อนลงในเมนูการตั้งค่าจนกว่าคุณจะเห็น \"เชื่อมต่อ\" กดเพื่อเข้าสู่เมนูเชื่อมต่อ",
+    "CL_CF_CS_bio24_creft_setup_setp4": "กด \"เชื่อมต่อเตาอบ\"",
+    "CL_CF_CS_bio24_creft_setup_setp5": "กดปุ่มสลับทางด้านขวาเพื่อเปิด Wi-Fi",
+    "CL_CF_CS_bio24_creft_setup_setp6": "ปุ่ม \"CONNECT\" จะปรากฏขึ้น กดปุ่ม จากนั้นคุณสามารถดำเนินการต่อในแอปได้โดยแตะปุ่ม NEXT ด้านล่าง",
+    "CL_CF_CS_bio24_creft_pair_step4": "กดที่ \"เชื่อมต่อผู้ใช้\"",
+    "CL_CF_CS_bio24_creft_pair_step5": "กดปุ่ม 'PAIR'",
+    "CL_CF_CS_bio24_creft_pair_step6": "การนับถอยหลังเริ่มต้นขึ้น คุณสามารถดำเนินการต่อในแอปได้โดยแตะปุ่มถัดไปด้านล่าง",
+    "CL_CF_CS_bio24_elements_setup_step1": "เปิดเตาอบของคุณ เปิดเมนูการตั้งค่าโดยกดไอคอน **** ที่มุมซ้ายบน",
+    "CL_CF_CS_bio24_elements_setup_step2": "เลื่อนลงในเมนูการตั้งค่าจนกว่าคุณจะเห็น \"การเชื่อมต่อ\" กดเพื่อเข้าสู่เมนูการเชื่อมต่อ",
+    "CL_CF_CS_bio24_elements_setup_step3": "กด \"เชื่อมต่อเตาอบ\" ทางด้านซ้าย เมื่อเมนูเปิดขึ้น ให้กดปุ่มสลับทางด้านขวาเพื่อเปิดใช้งาน Wi-Fi",
+    "CL_CF_CS_bio24_elements_setup_step4": "ปุ่ม \"CONNECT\" จะปรากฏขึ้น กดปุ่ม จากนั้นคุณสามารถดำเนินการต่อในแอปได้โดยแตะปุ่ม NEXT ด้านล่าง",
+    "CL_CF_CS_bio24_elements_pair_step3": "กดปุ่ม \"CONNECT USER\" ทางด้านซ้าย เมื่อเมนูเปิดขึ้น ให้กดปุ่ม \"PAIR\" จากนั้นคุณสามารถดำเนินการต่อในแอปได้โดยแตะปุ่ม NEXT ด้านล่าง"
 }
