--- a/language/i18n_tr.json
+++ b/language/i18n_tr.json
@@ -4025,5 +4025,24 @@
     "CL_DV_DW_water_energy": "Su ve Enerji",
     "CL_DV_DW_light_display": "Işık ve Gösterim",
     "CL_DV_HOB_how_to_connect_accessories": "Aksesuarların Nasıl Bağlanacağı",
-    "CL_CF_SK_amount_of_servings": "Porsiyon miktarı"
+    "CL_CF_SK_amount_of_servings": "Porsiyon miktarı",
+    "CL_CF_CS_name_duplicate_tip": "Cihaz adı zaten mevcut",
+    "CL_DV_OV_your_oven_is_offline": "Fırınınız çevrimdışı",
+    "CL_DV_OV_offline_tips": "Fırın çevrimdışıyken bazı işlevler kullanılamaz. Fırınınızı yeniden bağlamayı deneyin.",
+    "CL_DV_OV_combi": "kombi",
+    "share_account": "PAYLAŞILAN HESAPLAR",
+    "CL_CF_CS_bio24_creft_setup_setp1": "Fırınınızı açın. Doğrudan Erişim Menüsünü açmak için fırın ekranının sol köşesindeki üç noktaya **** basın.",
+    "CL_CF_CS_bio24_creft_setup_setp2": "Sağ taraftaki **** ikonuna basarak Ayarlar menüsünü açın.",
+    "CL_CF_CS_bio24_creft_setup_setp3": "Ayarlar menüsünü ''BAĞLAN'' yazısını görene kadar aşağı kaydırın. BAĞLAN menüsüne girmek için tuşuna basın.",
+    "CL_CF_CS_bio24_creft_setup_setp4": "''FIRINI BAĞLA'' tuşuna basın.",
+    "CL_CF_CS_bio24_creft_setup_setp5": "Wi-Fi'yi AÇMAK için sağdaki geçiş düğmesine basın.",
+    "CL_CF_CS_bio24_creft_setup_setp6": "''BAĞLAN'' butonu belirir. Butona basın. Şimdi aşağıdaki SONRAKİ butonuna dokunarak uygulamada ilerleyebilirsiniz.",
+    "CL_CF_CS_bio24_creft_pair_step4": "''KULLANICIYI BAĞLA'' butonuna basın.",
+    "CL_CF_CS_bio24_creft_pair_step5": "''EŞLEŞTİR'' butonuna basın.",
+    "CL_CF_CS_bio24_creft_pair_step6": "Geri sayım başlıyor. Şimdi aşağıdaki SONRAKİ düğmesine dokunarak uygulamada devam edebilirsiniz.",
+    "CL_CF_CS_bio24_elements_setup_step1": "Fırınınızı açın. Sol üst köşedeki **** simgesine basarak Ayarlar menüsünü açın.",
+    "CL_CF_CS_bio24_elements_setup_step2": "Ayarlar menüsünü ''Bağlantı''yı görene kadar aşağı kaydırın. Bağlantı menüsüne girmek için tuşuna basın.",
+    "CL_CF_CS_bio24_elements_setup_step3": "Sol taraftaki ''FIRINI BAĞLA'' tuşuna basın. Menü açıldığında, Wi-Fi'yi etkinleştirmek için sağdaki geçiş düğmesine basın.",
+    "CL_CF_CS_bio24_elements_setup_step4": "''BAĞLAN'' butonu belirir. Butona basın. Şimdi aşağıdaki SONRAKİ butonuna dokunarak uygulamada ilerleyebilirsiniz.",
+    "CL_CF_CS_bio24_elements_pair_step3": "Sol taraftaki ''CONNECT USER''a basın. Menü açıldığında ''PAIR'' düğmesine basın. Şimdi aşağıdaki NEXT düğmesine dokunarak uygulamada ilerleyebilirsiniz."
 }
