--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -4025,5 +4025,24 @@
     "CL_DV_DW_water_energy": "जल एवं ऊर्जा",
     "CL_DV_DW_light_display": "प्रकाश और प्रदर्शन",
     "CL_DV_HOB_how_to_connect_accessories": "सहायक उपकरण कैसे कनेक्ट करें",
-    "CL_CF_SK_amount_of_servings": "सर्विंग की मात्रा"
+    "CL_CF_SK_amount_of_servings": "सर्विंग की मात्रा",
+    "CL_CF_CS_name_duplicate_tip": "उपकरण का नाम पहले से मौजूद है",
+    "CL_DV_OV_your_oven_is_offline": "आपका ओवन ऑफ़लाइन है",
+    "CL_DV_OV_offline_tips": "ओवन के ऑफ़लाइन होने पर कुछ कार्यक्षमताओं का उपयोग नहीं किया जा सकता। अपने ओवन को फिर से कनेक्ट करने का प्रयास करें।",
+    "CL_DV_OV_combi": "कोम्बी",
+    "share_account": "साझा खाते",
+    "CL_CF_CS_bio24_creft_setup_setp1": "अपना ओवन चालू करें। डायरेक्ट एक्सेस मेनू खोलने के लिए ओवन डिस्प्ले के बाएं कोने में तीन बिंदुओं पर दबाएँ।",
+    "CL_CF_CS_bio24_creft_setup_setp2": "दाईं ओर स्थित **** आइकन दबाकर सेटिंग्स मेनू खोलें।",
+    "CL_CF_CS_bio24_creft_setup_setp3": "सेटिंग्स मेनू को तब तक नीचे स्क्रॉल करें जब तक आपको ''CONNECT'' दिखाई न दे। CONNECT मेनू में प्रवेश करने के लिए दबाएँ।",
+    "CL_CF_CS_bio24_creft_setup_setp4": "''कनेक्ट ओवन'' दबाएँ।",
+    "CL_CF_CS_bio24_creft_setup_setp5": "वाई-फाई चालू करने के लिए दाईं ओर स्थित टॉगल बटन दबाएं।",
+    "CL_CF_CS_bio24_creft_setup_setp6": "एक बटन ''कनेक्ट'' दिखाई देता है। बटन दबाएँ। अब आप नीचे NEXT बटन पर टैप करके ऐप में आगे बढ़ सकते हैं।",
+    "CL_CF_CS_bio24_creft_pair_step4": "''कनेक्ट यूजर'' पर दबाएँ।",
+    "CL_CF_CS_bio24_creft_pair_step5": "''PAIR'' बटन दबाएँ।",
+    "CL_CF_CS_bio24_creft_pair_step6": "उल्टी गिनती शुरू हो गई है। अब आप नीचे NEXT बटन पर टैप करके ऐप में आगे बढ़ सकते हैं।",
+    "CL_CF_CS_bio24_elements_setup_step1": "अपना ओवन चालू करें। ऊपरी बाएँ कोने में **** आइकन दबाकर सेटिंग्स मेनू खोलें।",
+    "CL_CF_CS_bio24_elements_setup_step2": "सेटिंग्स मेनू को तब तक नीचे स्क्रॉल करें जब तक आपको ''कनेक्टिविटी'' न दिखाई दे। कनेक्टिविटी मेनू में प्रवेश करने के लिए दबाएँ।",
+    "CL_CF_CS_bio24_elements_setup_step3": "बाईं ओर ''कनेक्ट ओवन'' दबाएँ। जब मेनू खुल जाए, तो वाई-फाई सक्षम करने के लिए दाईं ओर टॉगल बटन दबाएँ।",
+    "CL_CF_CS_bio24_elements_setup_step4": "एक बटन ''कनेक्ट'' दिखाई देता है। बटन दबाएँ। अब आप नीचे NEXT बटन पर टैप करके ऐप में आगे बढ़ सकते हैं।",
+    "CL_CF_CS_bio24_elements_pair_step3": "बाईं ओर ''CONNECT USER'' पर दबाएँ। जब मेनू खुल जाए, तो ''PAIR'' बटन दबाएँ। अब आप नीचे NEXT बटन पर टैप करके ऐप में आगे बढ़ सकते हैं।"
 }
