--- a/language/i18n_sl.json
+++ b/language/i18n_sl.json
@@ -3078,7 +3078,7 @@
     "cancel_share": "preklical skupno rabo",
     "items_added_to_shopping_list": "Predmeti dodani na nakupovalni seznam",
     "drum_illumination": "Osvetlitev bobna",
-    "bundling_detection": "Odkrivanje paketov",
+    "bundling_detection": "Senzor zavijanja perila",
     "change_language_tips": "Spremenite jezik na vaši napravi.",
     "change_brightness_tips": "Prilagodite svetlost zaslona vaše naprave.",
     "dishwashing_assist": "Pomočnik za pomivanje posode",
@@ -3262,7 +3262,7 @@
     "program_mode_disinfection_desc": "Način sušenja z visoko temperaturo, ekstra suho. Uniči do 99,99 % bakterij.",
     "program_mode_delicate_desc": "Nežno mešanje, da preprečite nepotrebno obrabo in trganje oblačil.",
     "bundling_detection_desc": "Ta funkcija pomaga zagotoviti enakomerno sušenje oblačil in preprečuje, da bi bilo treba oblačila ločiti ročno. Privzeto je vedno omogočena, vendar jo lahko tukaj onemogočite.",
-    "turn_on_bundling_detection": "Omogoči/onemogoči zaznavanje združevanja",
+    "turn_on_bundling_detection": "Omogoči/onemogoči zaznavanje zavijanja perila",
     "wine_key": "Ključ",
     "wine_modes": "Načini",
     "all_floors_key": "Vsa nadstropja",
@@ -4025,5 +4025,24 @@
     "CL_DV_DW_water_energy": "Voda in energija",
     "CL_DV_DW_light_display": "Svetloba in zaslon",
     "CL_DV_HOB_how_to_connect_accessories": "Kako povezati dodatke",
-    "CL_CF_SK_amount_of_servings": "Količina porcij"
+    "CL_CF_SK_amount_of_servings": "Količina porcij",
+    "CL_CF_CS_name_duplicate_tip": "Ime naprave že obstaja",
+    "CL_DV_OV_your_oven_is_offline": "Vaša pečica je brez povezave",
+    "CL_DV_OV_offline_tips": "Nekaterih funkcij ni mogoče uporabiti, ko je pečica brez povezave. Poskusite ponovno priključiti pečico.",
+    "CL_DV_OV_combi": "combi",
+    "share_account": "SKUPLJENI RAČUNI",
+    "CL_CF_CS_bio24_creft_setup_setp1": "Vklopite pečico. Pritisnite tri pike **** v levem kotu zaslona pečice, da odprete meni neposrednega dostopa.",
+    "CL_CF_CS_bio24_creft_setup_setp2": "Odprite meni Nastavitve s pritiskom na ikono **** na desni.",
+    "CL_CF_CS_bio24_creft_setup_setp3": "Pomaknite se navzdol po meniju z nastavitvami, dokler ne vidite ''POVEŽI''. Pritisnite za vstop v meni CONNECT.",
+    "CL_CF_CS_bio24_creft_setup_setp4": "Pritisnite ''POVEŽI PEČICO''.",
+    "CL_CF_CS_bio24_creft_setup_setp5": "Pritisnite preklopni gumb na desni, da VKLOPITE Wi-Fi.",
+    "CL_CF_CS_bio24_creft_setup_setp6": "Prikaže se gumb ''POVEŽI''. Pritisnite na gumb. Zdaj lahko nadaljujete v aplikaciji tako, da tapnete spodnji gumb NAPREJ.",
+    "CL_CF_CS_bio24_creft_pair_step4": "Pritisnite ''POVEŽI UPORABNIKA''.",
+    "CL_CF_CS_bio24_creft_pair_step5": "Pritisnite gumb ''PAIR''.",
+    "CL_CF_CS_bio24_creft_pair_step6": "Začne se odštevanje. Zdaj lahko nadaljujete v aplikaciji tako, da tapnete spodnji gumb NAPREJ.",
+    "CL_CF_CS_bio24_elements_setup_step1": "Vklopite pečico. Odprite meni Nastavitve s pritiskom na ikono **** v zgornjem levem kotu.",
+    "CL_CF_CS_bio24_elements_setup_step2": "Pomaknite se navzdol po meniju z nastavitvami, dokler ne vidite »Povezljivost«. Pritisnite za vstop v meni Povezljivost.",
+    "CL_CF_CS_bio24_elements_setup_step3": "Na levi strani pritisnite ''POVEZI PEČICO''. Ko se odpre meni, pritisnite preklopni gumb na desni, da omogočite Wi-Fi.",
+    "CL_CF_CS_bio24_elements_setup_step4": "Prikaže se gumb ''POVEŽI''. Pritisnite na gumb. Zdaj lahko nadaljujete v aplikaciji tako, da tapnete spodnji gumb NAPREJ.",
+    "CL_CF_CS_bio24_elements_pair_step3": "Pritisnite ''POVEŽI UPORABNIKA'' na levi strani. Ko se odpre meni, pritisnite na gumb ''PAIR''. Zdaj lahko nadaljujete v aplikaciji tako, da tapnete spodnji gumb NAPREJ."
 }
