--- a/language/i18n_sv.json
+++ b/language/i18n_sv.json
@@ -4025,5 +4025,24 @@
     "CL_DV_DW_water_energy": "Vatten & Energi",
     "CL_DV_DW_light_display": "Ljus & Display",
     "CL_DV_HOB_how_to_connect_accessories": "Hur man ansluter tillbehör",
-    "CL_CF_SK_amount_of_servings": "Antal portioner"
+    "CL_CF_SK_amount_of_servings": "Antal portioner",
+    "CL_CF_CS_name_duplicate_tip": "Apparatens namn finns redan",
+    "CL_DV_OV_your_oven_is_offline": "Din ugn är offline",
+    "CL_DV_OV_offline_tips": "Vissa funktioner kan inte användas när ugnen är offline. Försök att ansluta ugnen igen.",
+    "CL_DV_OV_combi": "kombi",
+    "share_account": "DELADE KONTON",
+    "CL_CF_CS_bio24_creft_setup_setp1": "Slå på ugnen. Tryck på de tre punkterna **** i det vänstra hörnet av ugnsdisplayen för att öppna menyn för direktåtkomst.",
+    "CL_CF_CS_bio24_creft_setup_setp2": "Öppna menyn Inställningar genom att trycka på ****-ikonen till höger.",
+    "CL_CF_CS_bio24_creft_setup_setp3": "Scrolla ner i menyn Inställningar tills du ser ''CONNECT''. Tryck för att gå till ANSLUT-menyn.",
+    "CL_CF_CS_bio24_creft_setup_setp4": "Tryck på ''ANSLUT UGNEN''.",
+    "CL_CF_CS_bio24_creft_setup_setp5": "Tryck på växlingsknappen till höger för att slå PÅ Wi-Fi.",
+    "CL_CF_CS_bio24_creft_setup_setp6": "En knapp ''CONNECT'' visas. Tryck på knappen. Du kan nu fortsätta i appen genom att trycka på NÄSTA-knappen nedan.",
+    "CL_CF_CS_bio24_creft_pair_step4": "Tryck på ''ANSLUT ANVÄNDARE''.",
+    "CL_CF_CS_bio24_creft_pair_step5": "Tryck på knappen ''PAIR''.",
+    "CL_CF_CS_bio24_creft_pair_step6": "En nedräkning startar. Du kan nu fortsätta i appen genom att trycka på NÄSTA-knappen nedan.",
+    "CL_CF_CS_bio24_elements_setup_step1": "Slå på ugnen. Öppna menyn Inställningar genom att trycka på ****-ikonen i det övre vänstra hörnet.",
+    "CL_CF_CS_bio24_elements_setup_step2": "Scrolla ner i menyn Inställningar tills du ser ''Anslutning''. Tryck för att öppna menyn Anslutningar.",
+    "CL_CF_CS_bio24_elements_setup_step3": "Tryck på ''KOPPLA UGNEN'' på vänster sida. När menyn öppnas, tryck på växlingsknappen till höger för att aktivera Wi-Fi.",
+    "CL_CF_CS_bio24_elements_setup_step4": "En knapp ''CONNECT'' visas. Tryck på knappen. Du kan nu fortsätta i appen genom att trycka på NÄSTA-knappen nedan.",
+    "CL_CF_CS_bio24_elements_pair_step3": "Tryck på ''CONNECT USER'' på vänster sida. När menyn öppnas, tryck på ''PAIR''-knappen. Du kan nu fortsätta i appen genom att trycka på NÄSTA-knappen nedan."
 }
